# bakerslight

./: .envrc  .gitignore  CMakeLists.txt  default.nix
include/: components.hpp  player.hpp  systems.hpp  tilemap.hpp
src/: main.cpp  player.cpp  player.hpp  tilemap.cpp
src/assets/: bakerslightroomtilesheet.aseprite
